Def Code and Hotfix Carlos

--- a/My_Missions/.vscode/settings.json
+++ b/My_Missions/.vscode/settings.json
@@ -4,7 +4,8 @@
         "Group",
         "timer",
         "MANTIS",
-        "lfs"
+        "lfs",
+        "env"
     ],
     "Lua.workspace.library": [
         "${3rd}/lfs/library"
